# medical_chatbot_app

./: README.md  app.py  app2.py  config.json  pyproject.toml  requirements.txt
model/: df_label.pkl
