[tool.poetry]
name = "medical-text-app"
version = "1"
description = ""
authors = ["Stalin Bonilla <stalin.bonilla23@gmail.com>"]
readme = "README.md"
packages = [{include = "medical-text-app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
